# mlsys

./: .clang-format  .gitignore  .gitmodules  Makefile  source_me.sh  source_me_venv.sh  tmux_work.sh
cluster/: NOTE-SLURM.md  source_me_bcm.sh
cluster/examples/: slurm-sbatch-demo-script.sh
cluster/network-collective/: README.md  all-gh200.sh  run-nccl-tests-baremetal-mpi.py
env/: env_gitconfig  env_inputrc  env_vimrc
gpu/: .gitignore  Makefile  monitor-mem-usage.sh
gpu/cuda-demos/: CMakeLists.txt  uvm_vec_add.cu
mlsys/apps/video-downloader/: requirements.txt  setup.sh  yt-downloader-core.py
mlsys/apps/video-upscaling/: .gitignore  README.md  setup-real-basic-vsr.sh  setup-supir.sh
mlsys/apps/video-upscaling/ckpts/: .gitignore
mlsys/apps/video-upscaling/requirements/: requirements-real-basic-vsr.txt
mlsys/cluster/: NOTE-SLURM.md
mlsys/cluster/demo-process-group/: distr.py  mpirun.sh  mrun.sh  redis_store.py  sbatch.sh  srun.sh
mlsys/cluster/examples/: slurm-runner-sbcast-demo.sh
mlsys/dist-process/demo-process-group/: .gitignore  distr.py  mpirun.sh  mrun.sh  redis_store.py  sbatch.sh  srun.sh
mlsys/environments/: .gitignore  NOTES-Build.md  check_cuda.py  requirements-pytorch.txt  setup.sh  setup_grace.sh  setup_grace_cpu.sh  source_me_packages.sh
mlsys/environments/requirements/: requirements-benchmark.txt  requirements-deps.txt
mlsys/environments/scripts/: common.sh  find_cuda.sh  find_cudnn.sh  find_libcudnn.sh  find_libopenblas.sh  find_nccl.sh  find_openblas.sh  install_pytorch_grace.sh  install_pytorch_grace_nccl.sh  install_pytorch_grace_plain.sh
mlsys/environments/setup-scripts/: find_cuda.sh  setup_grace_cpu.sh
mlsys/gpu/: .gitignore  Makefile  check_cuda.py  commands.sh  install_deps.sh  monitor-mem-usage.sh  source_me_install_cu130.sh  source_me_install_deps.sh
mlsys/gpu/cuda-demos/: CMakeLists.txt  Makefile  mpi_egm.cu  uvm_pingpong.cu  uvm_vec_add.cu
mlsys/gpu/matmul/: .gitignore  CMakeLists.txt  Makefile  README.md  matmul_kernel_a01_basic.cuh  matmul_kernel_a02_shmem.cuh  matmul_kernel_a03_thread_tile_1d.cuh  matmul_kernel_a04_thread_tile_2d.cuh  matmul_kernel_a05_thread_tile_2d_cache.cuh  matmul_kernel_a06_thread_tile_float4.cuh  matmul_kernel_a07_double_buffering.cuh  matmul_kernel_a08_tuning.cuh  matmul_kernel_b01_warp_tile.cuh  matmul_kernel_basic.cuh  matmul_kernel_c01_warp_tile_bf16.cuh  matmul_kernel_d01_tc3_wmma_minimal.cuh  matmul_kernel_d01_tensor_core_tma.cuh  matmul_kernel_d02_tc3_wmma_shmem.cuh  matmul_kernel_d02_tensor_core_wmma_shmem.cuh  matmul_kernel_d03_tc3_wmma_async.cuh  matmul_kernel_e01_tc4_basic.cuh  matmul_kernel_e02_tc4_wg_tiling.cuh  matmul_kernel_e03_tc4_pipeline.cuh  matmul_kernel_e04_tc4_multi_consumer.cuh  matmul_kernel_e05_persistent.cuh  matmul_kernel_e06_fast_barrier.cuh  matmul_kernel_e07_cta_cluster.cuh  matmul_kernel_e08_store_opt.cuh  matmul_kernel_e09_no_memset.cuh  matmul_kernel_e10_async_store.cuh  matmul_kernel_shmem_basic.cuh  matmul_kernel_tiled_shmem.cuh  matmul_main.cu  matmul_utils.cuh  torch_matmul.py
mlsys/gpu/nvbandwidth/: CMakeLists.txt  Makefile  common.h
mlsys/gpu/pytorch-collective/: commands.sh  sbatch.sh  srun.sh  test-pytorch-distributed.py  test-torchrun-basics.py
mlsys/gpu/pytorch-micro/: host_device_copy.py  matrix_mul.py  nn_linear.py  utils.py
mlsys/inference/nano-vllm/: .gitignore  README.md  source_me_install_deps.sh
mlsys/inference/oss-models/: README.md  source_me_cosmos_predict.sh
mlsys/inference/sglang/: README.md  check_cuda.py  source_me_install_deps.sh
mlsys/inference/sglang/quickstart/: s01-offline-batch-inference.py
mlsys/inference/tensorrt-llm/: .gitignore  README.md  requirements.txt  source_me.sh
mlsys/inference/tutorial/: README.md  p01-text-generation.ipynb  p02-batching.ipynb  requirements.txt
mlsys/inference/vllm/: README.md  requirements.txt  source_me_install_deps.sh
mlsys/inference/vllm/quickstart/: .gitignore  inspect_model.py  utils.py  v01-offline-batch-inference.py  v02-tensor-parallel.py  v03-expert-parallel.py
mlsys/model/: NOTES-minGPT.md  NOTES-nanoGPT.md
mlsys/model/d2l/: NOTES.md  requirements-d2l.txt
mlsys/model/minGPT/: .gitignore
mlsys/model/minGPT/mingpt/: model.py
mlsys/model/notebooks/: .gitignore  min-gpt-demo.ipynb  min-gpt-generate.ipynb  nano-gpt-dev.ipynb
mlsys/model/setup-scripts/: check_cuda.py
mlsys/network/collective-nccl-tests/: README.md
mlsys/network/collective-nccl-tests/hosts/: superpowers.yml
mlsys/network/collective-pytorch/: commands.sh  sbatch.sh  source_me_install_deps.sh  srun.sh  test-pytorch-distributed.py
mlsys/network/nccl-tests/: .gitignore  README.md
mlsys/network/smart-nic/: README.md
mlsys/services/redis/: README.md  demo_redis_client.py  redis.conf
mlsys/services/telemetry/: README.md  app-log-unix-socket.py  app-metrics-unix-socket.py  conf-fluent-bit-forward-prom-exp.conf  conf-fluent-bit-forward-stdout.conf  conf-fluent-bit-metrics-prom-exp.conf  conf-fluent-bit-metrics-prom-write.conf  conf-fluent-bit-metrics-stdout.conf
mlsys/training/: NOTES-Megatron-LM.md
mlsys/training/megatron-lm/: gpt3_training-n4.sh
mlsys/utils/: check_cuda.py  inspect_model.py
model/: NOTES-nanoGPT.md  source_me.sh
model/setup-scripts/: install_sys_deps.sh
network/smart-nic/: README.md
scripts/: common.sh  init_dev_env.py  install_deps.py  print_host_info.py  sync_with_rtp.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/gpu/: CMakeLists.txt  gpu_query_device.cu
training/: .gitignore
